<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 点入的appkey -->
    <string name="app_key">0000B1422300006F</string>
    <string name="app_name1">余粮</string>
    <string name="app_content">余粮是一款利用业余时间赚钱的项目</string>

    <!-- 主页 -->
    <string name="zhuanqian">赚钱</string>
    <string name="zhuanqian_num">累计9万人参与</string>
    <string name="shoutu">收徒</string>
    <string name="shoutu_num">超高奖励，上不封顶</string>
    <string name="yiyuanduobao">一元夺宝</string>
    <string name="yiyuanduobao_num">一元买iPhone</string>
    <string name="youhuiquan">优惠券</string>
    <string name="youhuiquan_num">累计9万人参与</string>
    <string name="shengqian_num">累计960万人参与</string>
    <string name="shengqian">省钱</string>
    <string name="duihuan">兑换</string>
    <string name="duihuan_num">累计兑换18888万元</string>
    <string name="load_data">正在加载,请稍候&#8230;</string>

    <!-- 兑换         充值 -->
    <string name="chongzhi_desp">一个工作日内到账，法定节假日三天内到账。</string>
    <string name="chongzhi_mobile">手机号码：</string>
    <string name="chongzhi_account">充值金额：</string>
    <!-- 兑换         提现 -->
    <string name="tixian_ID">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号：</string>
    <string name="tixian_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="tixian_account">提现金额：</string>
    <!-- 兑换         兑换币兑换 -->
    <string name="duihuan_desp">兑换到夺宝账户中，参与1元夺宝。</string>
    <string name="duihuan_account">金&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;额：</string>

    <!-- 更多 -->
    <string name="app_name">yuliang</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mobile">手机</string>
    <string name="mobile_number">手机号：</string>
    <string name="input_mobile_number">请输入手机号</string>
    <string name="input_bind_mobile">请綁定手机号</string>
    <string name="mobile_code">验证码：</string>
    <string name="input_mobile_code">请输入验证码</string>
    <string name="identify_code">获取验证码</string>
    <string name="positive">确定</string>
    <string name="ID">ID</string>
    <string name="info">资料</string>
    <string name="weixin">微信</string>
    <string name="score">成绩单</string>
    <string name="cuntomer">客服中心</string>
    <string name="news">新闻公告</string>
    <string name="business">商务合作</string>
    <string name="update">检查升级</string>
    <string name="changeuser">切换账号</string>
    <string name="version">1.0.121101</string>
    <string name="submit">提交</string>
    <string name="nick">昵称</string>
    <string name="input_nick">请输入昵称</string>
    <string name="avatar">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="profession">职业</string>
    <string name="score_question">积分问题</string>
    <string name="wx_custom">微信客服</string>
    <string name="common_question">常见问题</string>
    <string name="business_custom">商务合作请联系：biz@yuliang.com</string>
    <string name="business_descrip">*此邮箱仅处理商务合作，不回复任何客服问题，客服问题请前往客服中心！</string>
    <string name="bind_descrip">绑定完就不怕ID丢失了，随时可以通过"设置"-"切换账号"找回自己的ID！</string>
    <string name="wx_notice">为了您的账号安全，请先进行微信号绑定，完成绑定即可安心兑换。</string>
    <string name="step1">步骤一：长按并存储以下二维码图片，打开微信扫一扫识别该二维码，关注余粮服务号。</string>
    <string name="step2">步骤二：关注完成后，在微信中点击"绑定账号"，获取验证码。</string>
    <string name="step3">步骤三：在下方输入从余粮微信公众号中获得的验证码。</string>

    <!-- 成绩单 -->
    <string name="used_days">使用天数</string>
    <string name="task_shouru">任务收入</string>
    <string name="xuetu_jiangli">学徒奖励</string>
    <string name="tudi_number">徒弟人数</string>
    <string name="tudi_jiangli">徒弟奖励</string>
    <string name="tusun_jiangli">徒孙奖励</string>
    <string name="shaidan">晒一晒</string>
    <string name="yuan">元</string>
    <string name="tian">天</string>
    <string name="ren">人</string>
    <string name="score_desp">成绩单每半小时生成一次</string>

    <!-- 顶部文字 -->
    <string name="title_detail">明细</string>
    <string name="title_makemoney">赚钱</string>
    <string name="title_apprentice">收徒</string>
    <string name="title_my_info">我的名片</string>
    <string name="title_lianmeng">联盟任务</string>
    <string name="title_youchang">有偿转发</string>
    <string name="title_ziliao">资料</string>
    <string name="title_xinshou">新手任务</string>
    <string name="title_jifen">积分问题</string>
    <string name="title_jifenproblem">联盟免费任务积分未到账</string>
    <string name="title_common_question">常见问题</string>
    <string name="title_newslist">新闻公告</string>
    <string name="title_newscontent">详情</string>

    <!-- 按钮上字符串 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>